--- a/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
@@ -176,8 +176,9 @@
                 </table>
             </div>
         </div>
-        <div class="row justify-content-center" *ngIf="(stage == 6 && controls.loanStatusForBM.value == 'incomplete' && controls.commentByBM.value) ||
-            (stage == 6 && controls.scrapStatusForBM.value == 'incomplete' && controls.commentByBM.value)">
+        <div class="row justify-content-center"
+            *ngIf="((stage == 6 || stage == 1) && controls.loanStatusForBM.value == 'incomplete' && controls.commentByBM.value) ||
+            ((stage == 6 || stage == 1) && controls.scrapStatusForBM.value == 'incomplete' && controls.commentByBM.value)">
             <div class="col-7">
                 <div class="row">
                     <div class="col-4">
