--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -326,6 +326,6 @@
     </div>
 </form>
 
-<div class="p-3">
+<div class="p-3" *ngIf="showButton">
     <kt-modal-footer (action)="action($event)" [value]="'Done'"></kt-modal-footer>
 </div>
