--- a/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
@@ -137,6 +137,21 @@
             </div>
         </div>
 
+        <div class="row kt-padding-t-40" *ngIf="!showScrapFlag">
+            <div class="col">
+                <div class="row">
+                    <div class="col-6 form-label text-color d-flex align-items-center mandatory">Part Payment (%)
+                    </div>
+                    <div class="col-6 per-gram align-items-center">
+                        <input type="text" class="form-control" formControlName="partPaymentPercent" placeholder="8"
+                            [class.isError]="controls.partPaymentPercent.invalid && controls.partPaymentPercent.touched">
+                        <mat-error *ngIf="controls.partPaymentPercent.invalid && controls.partPaymentPercent.touched">
+                            Field required</mat-error>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row col-6 offset-6 kt-padding-t-40 kt-padding-b-40" *ngxPermissionsOnly="['addGlobalSetting']">
             <kt-button [value]="'Save'" [type]="'submit'" (action)="submit()"></kt-button>
         </div>
