--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
@@ -83,7 +83,8 @@
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage" (disbursal)="disbursal($event)">
                         </kt-approval>
                     </mat-tab>
-                    <mat-tab label="Disbursement" *ngIf="scrapStage?.id == 4 || scrapStage?.id == 5">
+                    <mat-tab label="Disbursement"
+                        *ngIf="(url != 'view-scrap' && scrapStage?.id == 4) || scrapStage?.id == 5">
                         <kt-disburse [scrapIds]="scrapIds" [disbursementDetails]="customerDetail"
                             [showButton]="showButton"></kt-disburse>
                     </mat-tab>
