--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.scss
@@ -32,13 +32,9 @@
 	iframe {
 		pointer-events: none;
 		display: block;
-		// margin-top: -65px;
-        // margin-left: -7px;
-        // height: 195px;
-        width: 105%;
-        // margin-top: -60px;
-        height: 200px;
-        border: 0;
+		width: 105%;
+		margin-top: -65px;
+		margin-left: -3px;  
     }
     
     .img-container {
