--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -1,6 +1,6 @@
 <!-- <kt-modal-header *ngIf="!viewOnly" [title]='"KYC Details"' (action)="action()"></kt-modal-header> -->
 <div class="kt-padding-l-10 kt-padding-r-10" style="background: #fff">
-    <div *ngIf="data.modalData" class="row kt-padding-t-10 kt-padding-b-10 kt-padding-l-35">
+    <div *ngIf="data.packetView" class="row kt-padding-t-10 kt-padding-b-10 kt-padding-l-35">
         <div class="col-2 form-label">
             Number of Packets: {{ data.modalData.length }}
         </div>
