--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -122,12 +122,12 @@
                             </div>
                             <div *ngIf="item?.scrapStage?.id == 9">
                                 <div class="kt-pointer">
-                                    <button class="warning-button">{{'Processing Charges Paid' | titlecase}}</button>
+                                    <button class="warning-button">{{'processing charges paid' | titlecase}}</button>
                                 </div>
                             </div>
                             <div *ngIf="item?.scrapStage?.id == 10">
                                 <div class="kt-pointer">
-                                    <button class="warning-button">{{'Customer Disagreed' | titlecase}}</button>
+                                    <button class="warning-button">{{'customer disagreed' | titlecase}}</button>
                                 </div>
                             </div>
                         </div>
