--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
@@ -272,11 +272,11 @@
                         </div>
                     </div>
 
-                    <div class="col text-center">
+                    <!-- <div class="col text-center">
                         <mat-hint><small>
                                 On clicking confirm you will be redirected to available payment options
                             </small></mat-hint>
-                    </div>
+                    </div> -->
                 </ng-container>
             </ng-container>
         </div>
