--- a/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
@@ -8,7 +8,6 @@
                     *ngFor="let packet of packetsDetails; index as idx">
                     {{packet.packetUniqueId | uppercase}}</option>
             </select>
-
             <mat-error *ngIf="packetInfo.controls.packetId.invalid && packetInfo.controls.packetId.touched">
                 <small>
                     Field Required
@@ -131,6 +130,6 @@
 
     </div>
 </div>
-<div class="text-right kt-padding-b-15" *ngIf="showButton && packets.controls.length">
+<div class="text-right kt-padding-b-15" *ngIf="showButton && packets.controls.length && ornamentTypeData.length == 0">
     <kt-button [type]="'button'" [value]="buttonName" (click)="save()"></kt-button>
 </div>
