--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.scss
@@ -58,6 +58,10 @@
 		background: transparent;
 		border: thin solid #454D67;
 		border-radius: 5px;
-		padding: 5px;
-	}
+        padding: 5px;
+    }
+    .appraiser-btn {
+        width: 120px;
+    }
+    
 }
