--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -593,6 +593,7 @@ mat-header-row {
 	border: thin solid #454d67;
 	border-radius: 5px;
 	padding: 5px;
+	white-space: nowrap;
 }
 
 .primary-button {
