Changes in filters and search

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -176,6 +176,10 @@
               <div class="col-9">
                 <label>By Packet Assigned</label>
                 <select placeholder="Packet Assigned" class="form-control" formControlName="scheme">
+                  <option selected disabled>Select Type</option>
+                  <option value=''>All</option>
+                  <option value=true>Used</option>
+                  <option value=false>Unused</option>
                 </select>
               </div>
               <div class="col-3 d-flex align-items-end">
