--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -89,7 +89,7 @@
                             <div class="col-6">
                                 <input type="text" class="form-control" placeholder="John Doe"
                                     formControlName="accountHolderName"
-                                    [class.isError]="controls.accountHolderName.touched && controls.accountHolderName.invalid">
+                                    [class.isError]="controls.accountHolderName.touched && controls.accountHolderName.invalid" readonly>
                                 <mat-error
                                     *ngIf="controls.accountHolderName.errors?.required && controls.accountHolderName.touched">
                                     Required field
